--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
             <section class="row" style="justify-content: center; padding: 80px">
               <h3 class="text-center">Website Aset Alternatif</h3>
               <p class="text-center">
-                Website ini digunakan sementara selama PDN error
+                Website ini digunakan sementara selama PDN error <br />
+                <small style="color: red; font-style: italic">
+                  <strong>Username</strong> dan <strong>Password</strong> sama
+                  dengan di aplikasi aset.sampangkab.go.id
+                  <strong>(Versi Barada-E)</strong>
+                </small>
               </p>
               <div class="col-md-6 col-12">
                 <div
@@ -81,10 +86,10 @@
                                 type="text"
                                 id="username"
                                 name="username"
-                                required
                                 class="form-control input-baru"
                                 placeholder="Masukkan Username"
                                 autocomplete="off"
+                                required
                               />
                             </div>
                             <div class="col-md-4">
@@ -95,9 +100,10 @@
                                 type="password"
                                 id="password"
                                 name="password"
-                                required
                                 class="form-control input-baru"
                                 placeholder="Masukkan Password"
+                                autocomplete="new-password"
+                                required
                               />
                             </div>
                             <div class="col-sm-12 d-flex justify-content-end">
