--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     /> -->
     <link
       rel="shortcut icon"
-      href="https://cdn-icons-png.flaticon.com/512/6762/6762700.png"
+      href="https://cdn-icons-png.freepik.com/512/8308/8308851.png"
       type="image/png"
     />
 
