--- a/action.html
+++ b/action.html
@@ -57,6 +57,7 @@
   <link rel="stylesheet" href="assets/css/shared/iconly.css" />
   <script>
     document.addEventListener("DOMContentLoaded", function () {
+      tambahList();
       const data_store = JSON.parse(localStorage.getItem("loggedIn"));
       if (localStorage.getItem("status") !== "true") {
         window.location.href = "index.html";
@@ -261,7 +262,7 @@
                                 </tbody>
                               </table>
                               <div class="d-flex justify-content-end"></div>
-                              <button type="button" class="btn btn-success me-1 mb-1" id="cetak-daftar"
+                              <button type="button" class="btn btn-success me-1 mb-1 d-none" id="cetak-daftar"
                                 onclick="cetakDaftar()">Cetak</button>
                             </div>
                           </div>
