--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="row" style="justify-content: center; padding: 80px">
               <h3 class="text-center">Website Aset Alternatif</h3>
               <p class="text-center">
-                Website ini digunakan sementara selama PDN error <br />
+               <!-- < Website ini digunakan sementara selama PDN error <br />/> -->
                 <small style="color: red; font-style: italic">
                   <strong>Username</strong> dan <strong>Password</strong> sama
                   dengan di aplikasi aset.sampangkab.go.id
